--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,17 @@
 
 
 # MySQL connection properties
-spring.datasource.url=jdbc:mysql://localhost:3305/sample
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-server.port = 9090
+server.port = 8080
 
 # Set max file size to 10MB
 spring.servlet.multipart.max-file-size=0GB
 spring.servlet.multipart.max-request-size=0GB
-
-application.baseurl = http://127.0.0.1
-application.port = 9090
